			       =================
				BOGOFILTER NEWS
			       =================

Note: 

  Release 0.17.0 is the "Code Clean-up Release - Phase 2".

  Be sure to read RELEASE.NOTES-0.17 !
 
0.17.2	2004-02-??

	2004-02-20
	
	* Corrected typos in doc/bogofilter.xml (the man page)
	* and in contrib/mailfilter.example

	2004-02-19
	
	* Added experimental code for BerkeleyDB environments code
	  for improved locking and caching.

0.17.1	2004-02-09

	* 2004-02-05

	* Additional portability fixes for SunOS 4.1.4

	* 2004-02-04

	* Fix '-d' and '--bogofilter_dir=directory' options.

0.17.0	2004-02-01

	* Documentation cleanups.

	2004-01-31

	* Fixed warnings from Intel C++ 8
	* Portability fixes for SunOS 4.1.4

	2004-01-30

	* Removed DEPRECATED CODE.
	* Bogoutil now 'and's the maintenance operations together.
	* Bogofilter and bogolexer now use standard long option
	  parsing.

	2004-01-25

	* Extracted basic typedefs from system.h into bftypes.h.

	2004-01-23

	* Correct processing order as '-V' doesn't need to read the
          config file.
	* Correct SIGSEGV causes by missing environment variables.

0.16.4	2004-01-23 - Released
	2004-01-31 - Promoted to Stable Version