@@ -13,7 +13,10 @@ Note:
 	2004-02-20
 	
 	* Corrected typos in doc/bogofilter.xml (the man page)
-	* and in contrib/mailfilter.example
+	  and in contrib/mailfilter.example
+	* Documented bogoutil's histogram ('-H') option.
+	* Revised documentation of '-d', '-p', and '-w' options
+	  for bogoutil.
 
 	2004-02-19
 	
